# eigenvectors-from-eigenvalues

./: .gitignore  EVecFromEVal.m  GetAllEigenvectorsFromEigenvalues.m  GetEigenvectorFromEigenvalues.m  GetEigenvectorFromEigenvaluesTest.m  LICENSE  README.md  demo.m
cpp/: CMakeLists.txt  GEFE_utility.cpp  GEFE_utility.h  GetEigenvectorFromEigenvalues.cpp  GetEigenvectorFromEigenvalues.h  GetEigenvectorFromEigenvalues.hpp  main.cpp
cpp/testing/: CMakeLists.txt  GEFE_test.cpp  GetEigenvectorFromEigenvaluesTest.cpp
matlab/tests/: GetEigenvectorFromEigenvaluesTest.m
matlab/trials/: produce_times.m  produce_tolerances.m  time_complexity.md
trials/: DetermineAverageEigenvectorPrecision.m  PlotPrecisionTrials.m  PlotTimeTrials.m  TimeToRetrieveRandomEigenvector.m  plot_time_trials.m  produce_times.m  produce_tolerances.m  time_complexity.md  time_trials.m
utility/: GEFE_optimized.m  GetAllEigenvectorsFromEigenvalues.m  GetEigenvectorFromEigenvalues.m
